--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +13,15 @@
   "dependencies": {
     "celebrate": "^13.0.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "knex": "^0.21.15",
-    "sqlite3": "^5.0.1"
+    "sqlite3": "^5.0.1",   
+    "test": "^0.6.0"
   },
   "devDependencies": {
+    "supertest": "^6.1.3",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
 }
